--- a/Example/CRHexagonCollectionView/CRCellCollectionView-Info.plist
+++ b/Example/CRHexagonCollectionView/CRCellCollectionView-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>CRHexagonCollectionView</string>
+	<string>CRCellCollectionView</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
